# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = findersel
version = 0.1.4
description = Get selected files from macOS Finder.
long_description = file: README.md
long_description_content_type = text/markdown
author = Sergio Delgado Quintero
author_email = sdelquin@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    # https://pypi.org/classifiers/
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Desktop Environment
    Topic :: System :: Filesystems
    Topic :: System :: Operating System
    Topic :: Utilities
download_url = https://github.com/sdelquin/findersel
keywords = macos finder files sysadmin selection
project_urls =
    Issue Tracker=https://github.com/sdelquin/findersel/issues
    Documentation=https://github.com/sdelquin/findersel/blob/main/README.md
    Source Code=https://github.com/sdelquin/findersel

[options]
packages = findersel
python_requires = >=3.6

[options.package_data]
findersel = scripts/*.applescript
